--- a/src/components/HowItWorks.module.css
+++ b/src/components/HowItWorks.module.css
@@ -1,6 +1,7 @@
 .section {
   padding: 64px 0;
   position: relative;
+  overflow: hidden;
 }
 
 .container {
