--- a/src/components/LeadForm.module.css
+++ b/src/components/LeadForm.module.css
@@ -1,5 +1,6 @@
 .section {
   padding: 64px 0;
+  overflow: hidden;
 }
 
 .wrapper {
